--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   image_picker: ^1.0.7
   printing: ^5.14.2
   google_ml_kit: ^0.20.0
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
