--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,20 +44,19 @@ dependencies:
   hive_flutter: ^1.1.0
 
   # Utilities
-  path_provider: ^2.1.2
+  # path_provider: ^2.1.2
   intl: ^0.19.0
-  uuid: ^4.3.3
+  # uuid: ^4.3.3
   # UI components
-  flutter_slidable: ^3.0.1
+  # flutter_slidable: ^3.0.1
   table_calendar: ^3.0.9
-  fl_chart: ^0.66.0
-  flutter_staggered_grid_view: ^0.7.0 # Animations and UI enhancement
-  lottie: ^3.1.0
+  # fl_chart: ^0.66.0
+  # flutter_staggered_grid_view: ^0.7.0 # Animations and UI enhancement
+
   animate_do: ^3.3.3
   flutter_animate: ^4.5.2
   curved_navigation_bar: ^1.0.3
   google_fonts: ^6.1.0
-  flutter_spinkit: ^5.2.0
 
   # PDF and Excel export
   pdf: ^3.10.7
@@ -67,8 +66,9 @@ dependencies:
   # Camera functionality for student photos
   image_picker: ^1.0.7
   printing: ^5.14.2
-  google_ml_kit: ^0.20.0
-  google_generative_ai: ^0.4.7
+  flutter_gemini: ^2.0.5
+  lottie: ^3.3.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +85,19 @@ dev_dependencies:
   build_runner: ^2.4.8
   riverpod_generator: ^2.3.9
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icon/icon.png"
+  web:
+    generate: true
+  windows:
+    generate: true
+  macos:
+    generate: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -97,9 +110,7 @@ flutter: # The following line ensures that the Material Icons font is
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icon/
-    - assets/images/
     - assets/animations/
-    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
